# IPIU

./: .gitignore  README.md  pyproject.toml
SAKD/cifar/: .gitignore  ablation.py  data_loader.py  datasets.py  graph.py  loss_fun.py  sen12.py  train_baseline.py
SAKD/cifar/models/: ImageNet_cnn.py  ImageNet_snn.py  ResNet19_snn.py  ResNet_cnn.py  ResNet_snn.py  layers.py  linear_probing.py  vgg_cnn.py  vgg_snn.py
SAKD/imagenet/: Train.py  loss_kd.py
knowledge-distillation-pytorch/: evaluate.py  train.py  utils.py
knowledge-distillation-pytorch/experiments/sar/resnet50_student/: params.json
knowledge-distillation-pytorch/experiments/sar/resnet50_teacher/: metrics_val_best_weights.json  metrics_val_last_weights.json  params.json
knowledge-distillation-pytorch/experiments/sar/sewresnet101_teacher/: params.json
knowledge-distillation-pytorch/experiments/sar/sewresnet50_student/: metrics_val_last_weights.json  params.json
knowledge-distillation-pytorch/experiments/sar/sewresnet50_teacher/: metrics_val_best_weights.json  metrics_val_last_weights.json  params.json
knowledge-distillation-pytorch/model/: data_loader.py  datasets.py  layers.py  resnet.py  sew_resnet.py  spiking_vgg.py
