[tool.poetry]
name = "ipiu2025"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = {version = "1.13.1", source = "pytorch"}
torchvision = {version = "0.14.1", source = "pytorch"}
torchaudio = {version = "0.13.1", source = "pytorch"}
spikingjelly = "0.0.0.0.12"
snntorch = "^0.9.1"
scikit-image = "^0.24.0"
numpy = "<2"
torchsummary = "^1.5.1"
thop = "^0.1.1.post2209072238"
transformers = "^4.44.2"
datasets = "^2.21.0"
timm = "0.5.4"
visdom = "^0.2.4"
torchsummaryx = "^1.3.0"
scikit-learn = "^1.5.1"
pyyaml = "^6.0.2"
ruamel-yaml = "0.17.21"
progressbar = "^2.5"
progress = "^1.6"
ruamel-yaml-clib = "0.2.6"
wandb = "^0.17.9"
tensorflow = "^2.18.0"
cupy = "^13.3.0"
rasterio = "^1.4.3"
dataframe-image = "^0.2.6"
gurobipy = "^12.0.0"


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu117"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
